vagrant/awx/install_helm/files/awx-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-external
  namespace: awx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: web-awx.fks.lab
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: awx-service
                port:
                  number: 80
